apps/kube/disoxide/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: disoxide
  labels:
    name: disoxide
