apps/kube/disoxide/manifest/disoxide-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disoxide-service
  namespace: disoxide
  labels:
    app: disoxide
    tier: frontend
spec:
  type: ClusterIP
  selector:
    app: disoxide
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
