apps/kube/disoxide/manifest/rbac.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-disoxide-to-redis
  namespace: redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: disoxide
    - podSelector:
        matchLabels:
          app: disoxide
    ports:
    - protocol: TCP
      port: 6379
